added variable wise exploration

--- a/Notebooks/Data Exploration.ipynb
+++ b/Notebooks/Data Exploration.ipynb
@@ -1185,7 +1185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Data Visualization"
+    "# 6. Data Visualization / Exploration"
    ]
   },
   {
@@ -1992,6 +1992,127 @@
     "plt.figure(figsize=(20,20))\n",
     "sns.pairplot(test_final_data.drop(ignore,axis=1).drop(ID1,axis=1).drop(ID2,axis=1))\n",
     "plt.savefig(\"../plots/pair_plot/pair_plot_test.png\", dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4 Variable wise exploration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.4.1 Missing variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Patient_ID                       0\n",
+       "Health_Camp_ID                   0\n",
+       "Registration_Date              334\n",
+       "Var1                             0\n",
+       "Var2                             0\n",
+       "Var3                             0\n",
+       "Var4                             0\n",
+       "Var5                             0\n",
+       "Donation                     69060\n",
+       "Health_Score                 69060\n",
+       "camp1_merge_ind                  0\n",
+       "Health Score                 67459\n",
+       "camp2_merge_ind                  0\n",
+       "Number_of_stall_visited      68763\n",
+       "Last_Stall_Visited_Number    68763\n",
+       "camp3_merge_ind                  0\n",
+       "Camp_Start_Date                  0\n",
+       "Camp_End_Date                    0\n",
+       "Category1                        0\n",
+       "Category2                        0\n",
+       "Category3                        0\n",
+       "healthcamp_merge_ind             0\n",
+       "Online_Follower                  0\n",
+       "LinkedIn_Shared                  0\n",
+       "Twitter_Shared                   0\n",
+       "Facebook_Shared                  0\n",
+       "Income                       53546\n",
+       "Education_Score              65345\n",
+       "Age                          51612\n",
+       "First_Interaction                0\n",
+       "City_Type                    33208\n",
+       "Employer_Category            60075\n",
+       "patient_merge_ind                0\n",
+       "Outcome                          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_final_data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Patient_ID                       0\n",
+       "Health_Camp_ID                   0\n",
+       "Registration_Date                0\n",
+       "Var1                             0\n",
+       "Var2                             0\n",
+       "Var3                             0\n",
+       "Var4                             0\n",
+       "Var5                             0\n",
+       "Donation                     35249\n",
+       "Health_Score                 35249\n",
+       "camp1_merge_ind                  0\n",
+       "Health Score                 35249\n",
+       "camp2_merge_ind                  0\n",
+       "Number_of_stall_visited      35249\n",
+       "Last_Stall_Visited_Number    35249\n",
+       "camp3_merge_ind                  0\n",
+       "Camp_Start_Date                  0\n",
+       "Camp_End_Date                    0\n",
+       "Category1                        0\n",
+       "Category2                        0\n",
+       "Category3                        0\n",
+       "healthcamp_merge_ind             0\n",
+       "Online_Follower                  0\n",
+       "LinkedIn_Shared                  0\n",
+       "Twitter_Shared                   0\n",
+       "Facebook_Shared                  0\n",
+       "Income                       27796\n",
+       "Education_Score              32822\n",
+       "Age                          26313\n",
+       "First_Interaction                0\n",
+       "City_Type                    13394\n",
+       "Employer_Category            30888\n",
+       "patient_merge_ind                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_final_data.isna().sum()"
    ]
   },
   {
